--- a/dev/index.html
+++ b/dev/index.html
@@ -14,13 +14,10 @@
     <div id="demo"></div>
 
     <!-- test in production -->
-    <!--<script src="https://app.straas.net/straas_sdk"></script>-->
+    <!--<script src="https://app.straas.net/sdk/1.3.0/player-sdk.js"></script>-->
 
     <!-- test in staging -->
-    <!--<script src="https://app-staging.straas.net/straas_sdk"></script>-->
-
-    <!-- test in development, you should run `npm run build` on any change -->
-    <!--<script src="http://localhost:3000/straas_sdk"></script>-->
+    <!--<script src="https://app-staging.straas.net/sdk/1.3.0/player-sdk.js"></script>-->
 
     <!-- test in sdk, just run `npm run dev` -->
     <script src="/dist/straas.bundle.js"></script>
