--- a/dev/slow-index.js/index.html
+++ b/dev/slow-index.js/index.html
@@ -8,9 +8,8 @@
     <h1>http://your.own.domain/</h1>
     <div id="player" style="width: 1100px; height: 640px">載入SDK中...</div>
 
-    <!--<script src="https://app.straas.net/straas_sdk"></script>-->
-    <!--<script src="https://app-staging.straas.net/straas_sdk"></script>-->
-    <!--<script src="http://localhost:3000/straas_sdk"></script>-->
+    <!--<script src="https://app.straas.net/sdk/1.3.0/player-sdk.js"></script>-->
+    <!--<script src="https://app-staging.straas.net/sdk/1.3.0/player-sdk.js"></script>-->
 
     <!-- test in sdk, just run `npm run dev` -->
     <script src="/dist/straas.bundle.js"></script>
