--- a/demo/dev/index.html
+++ b/demo/dev/index.html
@@ -14,10 +14,10 @@
     <div id="demo"></div>
 
     <!-- test in production -->
-    <!--<script src="https://app.straas.net/sdk//player-sdk.js"></script>-->
+    <!--<script src="https://app.straas.net/sdk/1.10.6/player-sdk.js"></script>-->
 
     <!-- test in staging -->
-    <!--<script src="https://app-staging.straas.net/sdk//player-sdk.js"></script>-->
+    <!--<script src="https://app-staging.straas.net/sdk/1.10.6/player-sdk.js"></script>-->
 
     <!-- test in sdk, just run `npm run dev` -->
     <script src="/dist/straas.bundle.js"></script>
