--- a/demo/show-views-count/index.html
+++ b/demo/show-views-count/index.html
@@ -1,4 +1,4 @@
 <div id="player" style="width: 100%; height: 480px">載入中</div>
 
-<script src="https://app.straas.net/sdk//player-sdk.js"></script>
+<script src="https://app.straas.net/sdk/1.10.6/player-sdk.js"></script>
 <script src="index.js"></script>
