--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -1,4 +1,38 @@
-<div id="player" style="width: 100%; height: 480px">載入中</div>
+<!DOCTYPE html>
+<html lang="en">
 
-<script src="https://app.straas.net/sdk/2.1.0/player-sdk.js"></script>
-<script src="index.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <script src="https://app.straas.net/sdk/2.1.0/player-sdk.js"></script>
+</head>
+<script>
+  async function initPlayer() {
+    const response = await window.fetch('/version2demo/fetch-app-token.php')
+
+    if (response.ok) {
+      const data = await response.json()
+      window['StraaSOnInit'] = function () {
+        const StraaS = window.StraaS
+        const Player = StraaS.Player
+        const playerInstance = new Player('#player', {
+          type: Player.Type.VIDEO,
+          id: 'Qv8NKKBa',
+          accountId: data.account_id,
+          appToken: data.token
+        })
+      }
+    }
+
+  }
+
+  initPlayer()
+</script>
+
+<body>
+<div id="player" style="width: 640px; height: 480px"></div>
+</body>
+
+</html>
