--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -19,7 +19,7 @@
         const Player = StraaS.Player
         const playerInstance = new Player('#player', {
           type: Player.Type.VIDEO,
-          id: 'iqFDrEw7',
+          id: 'PKLQhfZh',
           accountId: 'demo.straas.io-test',
           appToken: data.token
         })
