--- a/demo/index.html
+++ b/demo/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Samples index of StraaS Web SDK</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css"></link>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
+  </link>
 </head>
 
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+          aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -20,55 +23,56 @@
     </div>
   </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Samples, StraaS Web SDK!</h1>
-        <p>提示：所有範例的基本運作皆需要網路連線。</p>
-        <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Samples, StraaS Web SDK!</h1>
+      <p>提示：所有範例的基本運作皆需要網路連線。如需要觀看程式碼，點進每個範例頁裡，按右鍵選"檢視網頁原始碼"即可</p>
+      <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
+    </div>
+  </div>
+
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="col-md-4">
+        <h2>Basic</h2>
+        <p>基本的iframe player，只要置換您的 ACCOUNT_ID 與 VIDEO_ID，即可立即開始使用我們的播放器觀賞影片！</p>
+        <p><a class="btn btn-default" href="./basic" role="button">查看範例 &raquo;</a></p>
+      </div>
+
+      <div class="col-md-4">
+        <h2>Plugin Usage</h2>
+        <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！</p>
+        <p><a class="btn btn-default" href="./plugin-usage" role="button">查看範例 &raquo;</a></p>
+      </div>
+
+      <div class="col-md-4">
+        <h2>Create own plugin</h2>
+        <p>我們的播放器也能夠進行高度的客製化，只需要掛載額外的 .js 或是 .css 檔，即可以替播放器增加新的功能或是修改外觀！在此範例中，我們透過 .css 檔將播放器變成了半透明。</p>
+        <p><a class="btn btn-default" href="./create-plugin" role="button">查看範例 &raquo;</a></p>
+      </div>
+
+      <div class="col-md-4">
+        <h2>Use videojs options</h2>
+        <p>您可以直接在 SDK 裡調整控制 video.js 的選項與參數。在此範例中，我們將播放器的進度條設定為開始播放 7 秒後消失。</p>
+        <p><a class="btn btn-default" href="./videojs-options" role="button">查看範例 &raquo;</a></p>
+      </div>
+
+      <div class="col-md-4">
+        <h2>Use PlayerVars</h2>
+        <p>透過 playerVars 參數，您可以自訂 player 初始化時期的一些行為或介面，比如說自動播放、循環播放、條件式顯示瀏覽人數等。以限定瀏覽人數為例，你可以傳入 { playerVars: {
+          showViewsCount: 300000 } } 來達到「當瀏覽人數達30萬時，才顯示瀏覽人數」的功能。</p>
+        <p><a class="btn btn-default" href="./show-views-count" role="button">查看範例 &raquo;</a></p>
       </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Basic</h2>
-          <p>基本的iframe player，只要在 <a href="./basic/index.js">index.js</a> 置換您的 ACCOUNT_ID 與 VIDEO_ID，即可立即開始使用我們的播放器觀賞影片！</p>
-          <p><a class="btn btn-default" href="./basic" role="button">查看範例 &raquo;</a></p>
-        </div>
+    <hr>
 
-        <div class="col-md-4">
-          <h2>Plugin Usage</h2>
-          <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！</p>
-          <p><a class="btn btn-default" href="./plugin-usage" role="button">查看範例 &raquo;</a></p>
-        </div>
-
-        <div class="col-md-4">
-          <h2>Create own plugin</h2>
-          <p>我們的播放器也能夠進行高度的客製化，只需要掛載額外的 .js 或是 .css 檔，即可以替播放器增加新的功能或是修改外觀！在此範例中，我們透過 .css 檔將播放器變成了半透明。</p>
-          <p><a class="btn btn-default" href="./create-plugin" role="button">查看範例 &raquo;</a></p>
-        </div>
-
-        <div class="col-md-4">
-          <h2>Use videojs options</h2>
-          <p>您可以直接在 SDK 裡調整控制 video.js 的選項與參數。在此範例中，我們將播放器的進度條設定為開始播放 7 秒後消失。</p>
-          <p><a class="btn btn-default" href="./videojs-options" role="button">查看範例 &raquo;</a></p>
-        </div>
-
-        <div class="col-md-4">
-          <h2>Use PlayerVars</h2>
-          <p>透過 playerVars 參數，您可以自訂 player 初始化時期的一些行為或介面，比如說自動播放、循環播放、條件式顯示瀏覽人數等。以限定瀏覽人數為例，你可以傳入 { playerVars: { showViewsCount: 300000 } } 來達到「當瀏覽人數達30萬時，才顯示瀏覽人數」的功能。</p>
-          <p><a class="btn btn-default" href="./show-views-count" role="button">查看範例 &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>2016 &copy; COPYRIGHT <a href="https://straas.io/">STRAAS.IO</a></p>
-      </footer>
-    </div> <!-- /container -->
+    <footer>
+      <p>2016 &copy; COPYRIGHT <a href="https://straas.io/">STRAAS.IO</a></p>
+    </footer>
+  </div> <!-- /container -->
 </body>
 
 </html>
