--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>Samples, StraaS Web SDK!</h1>
-      <p>提示：所有範例的基本運作皆需要網路連線。如需要觀看程式碼，點進每個範例頁裡，按右鍵選"檢視網頁原始碼"即可</p>
+      <p>提示：所有範例的基本運作皆需要網路連線。</p>
       <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
     </div>
   </div>
@@ -37,13 +37,13 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Basic</h2>
-        <p>基本的iframe player，只要置換您的 ACCOUNT_ID 與 VIDEO_ID，即可立即開始使用我們的播放器觀賞影片！</p>
+        <p>基本的iframe player，只要置換您的 ACCOUNT_ID 與 VIDEO_ID，即可立即開始使用我們的播放器觀賞影片！(點進範例頁後，按右鍵可檢視網頁原始碼)</p>
         <p><a class="btn btn-default" href="./basic" role="button">查看範例 &raquo;</a></p>
       </div>
 
       <div class="col-md-4">
         <h2>Plugin Usage</h2>
-        <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！</p>
+        <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！<a href="./index.js">source</a></p>
         <p><a class="btn btn-default" href="./plugin-usage" role="button">查看範例 &raquo;</a></p>
       </div>
 
