--- a/demo/index.html
+++ b/demo/index.html
@@ -43,7 +43,7 @@
 
       <div class="col-md-4">
         <h2>Plugin Usage</h2>
-        <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！<a href="./index.js">source</a></p>
+        <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！<a href="./plugin-usage/index.js">Source</a></p>
         <p><a class="btn btn-default" href="./plugin-usage" role="button">查看範例 &raquo;</a></p>
       </div>
 
