--- a/demo/index.html
+++ b/demo/index.html
@@ -39,24 +39,28 @@
         <h2>Basic</h2>
         <p>基本的iframe player，只要置換您的 ACCOUNT_ID 與 VIDEO_ID，即可立即開始使用我們的播放器觀賞影片！(點進範例頁後，按右鍵可檢視網頁原始碼)</p>
         <p><a class="btn btn-default" href="./basic" role="button">查看範例 &raquo;</a></p>
+        <p><a class="btn btn-default" href="./basic/index.js" role="button">檢視原始碼 &raquo;</a></p>
       </div>
 
       <div class="col-md-4">
         <h2>Plugin Usage</h2>
-        <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！<a href="./plugin-usage/index.js">Source</a></p>
+        <p>我們的播放器能讓您掛載第三方或是自己的外掛插件，協助處理額外的影像需求，快來體驗這令人驚豔的新特色吧！</p>
         <p><a class="btn btn-default" href="./plugin-usage" role="button">查看範例 &raquo;</a></p>
+        <p><a class="btn btn-default" href="./plugin-usage/index.js" role="button">檢視原始碼 &raquo;</a></p>
       </div>
 
       <div class="col-md-4">
         <h2>Create own plugin</h2>
         <p>我們的播放器也能夠進行高度的客製化，只需要掛載額外的 .js 或是 .css 檔，即可以替播放器增加新的功能或是修改外觀！在此範例中，我們透過 .css 檔將播放器變成了半透明。</p>
         <p><a class="btn btn-default" href="./create-plugin" role="button">查看範例 &raquo;</a></p>
+        <p><a class="btn btn-default" href="./create-plugin/index.js" role="button">檢視原始碼 &raquo;</a></p>
       </div>
 
       <div class="col-md-4">
         <h2>Use videojs options</h2>
         <p>您可以直接在 SDK 裡調整控制 video.js 的選項與參數。在此範例中，我們將播放器的進度條設定為開始播放 7 秒後消失。</p>
         <p><a class="btn btn-default" href="./videojs-options" role="button">查看範例 &raquo;</a></p>
+        <p><a class="btn btn-default" href="./videojs-options/index.js" role="button">檢視原始碼 &raquo;</a></p>
       </div>
 
       <div class="col-md-4">
@@ -64,6 +68,7 @@
         <p>透過 playerVars 參數，您可以自訂 player 初始化時期的一些行為或介面，比如說自動播放、循環播放、條件式顯示瀏覽人數等。以限定瀏覽人數為例，你可以傳入 { playerVars: {
           showViewsCount: 300000 } } 來達到「當瀏覽人數達30萬時，才顯示瀏覽人數」的功能。</p>
         <p><a class="btn btn-default" href="./show-views-count" role="button">查看範例 &raquo;</a></p>
+        <p><a class="btn btn-default" href="./show-views-count/index.js" role="button">檢視原始碼 &raquo;</a></p>
       </div>
     </div>
 
