--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -8,31 +8,10 @@
   <title>Document</title>
   <script src="https://app.straas.net/sdk/3.4.1/player-sdk.js"></script>
 </head>
-<script>
-  async function initPlayer() {
-    const response = await window.fetch('https://demo.straas.net/api/apptoken')
-
-    if (response.ok) {
-      const data = await response.json()
-      window['StraaSOnInit'] = function () {
-        const StraaS = window.StraaS
-        const Player = StraaS.Player
-        const playerInstance = new Player('#player', {
-          type: Player.Type.VIDEO,
-          id: 'PKLQhfZh',
-          accountId: 'demo.straas.io-test',
-          appToken: data.token
-        })
-      }
-    }
-
-  }
-
-  initPlayer()
-</script>
+<script src="index.js"></script>
 
 <body>
-<div id="player" style="width: 640px; height: 480px"></div>
+  <div id="player" style="width: 640px; height: 480px"></div>
 </body>
 
 </html>
