--- a/demo/basic/index.html
+++ b/demo/basic/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="https://app.straas.net/sdk/3.4.1/player-sdk.js"></script>
+  <script src="./index.js"></script>
 </head>
-<script src="index.js"></script>
 
 <body>
   <div id="player" style="width: 640px; height: 480px"></div>
